--- a/index.html
+++ b/index.html
@@ -12,9 +12,52 @@
         /* Perbaikan ukuran gambar */
         .profile-img {
             width: 300px;
-            height: 300px;
-            object-fit: cover;
-            border-radius: 50%;
+            height: 400px;
+            object-fit: fill;
+            border-radius: 10%;
+            margin-top: 50px; /* Menambahkan margin agar gambar lebih ke bawah */
+        }
+        /* Styling untuk header Experience */
+        .experience-header {
+            text-align: center;
+            padding: 50px 0;
+            background-color: #f8f9fa;
+        }
+        .experience-header h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        .experience-header .logo {
+            font-size: 3rem;
+            color: #007bff;
+            transition: transform 0.3s ease;
+        }
+        .experience-header .logo:hover {
+            transform: scale(1.2);
+            color: #0056b3;
+        }
+
+        .card-title i {
+    font-size: 1.3rem;
+}
+.card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+}
+
+
+        .card-text {
+            font-size: 0.9rem;
+        }
+        .btn-outline-primary {
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+        .btn-outline-primary:hover {
+            background-color: #007bff;
+            color: white;
         }
     </style>
 </head>
@@ -29,14 +72,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="education.html">Education</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="experience.html">Experience</a>
-                    </li>
+                 
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
@@ -65,6 +103,247 @@
             </div>
         </div>
     </section>
+
+    <!-- Experience Header -->
+    <section id="experience" class="experience-header">
+        <h2>Experience</h2>
+        <a href="#experience-details">
+            <i class="fas fa-briefcase logo"></i>
+        </a>
+    </section>
+
+    <section id="experience-details" class="container my-5">
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+
+    <!-- Roblox Game Developer -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title"><i class="fab fa-roblox text-danger me-2"></i>Game Developer – Roblox</h5>
+          <p class="card-text">Freelance developer sejak 12/2020 – Sekarang, menangani lebih dari 50+ klien di platform Roblox.</p>
+          <a href="https://addin108.carrd.co/" target="_blank" class="btn btn-outline-primary btn-sm">Lihat CV</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Magang BIJB -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title"><i class="fas fa-building text-warning me-2"></i>Magang Web Developer – PT BIJB</h5>
+          <p class="card-text">12/2023 – Sekarang, bertugas mengembangkan dan memelihara website internal Bandara Kertajati.</p>
+          <a href="https://addinzulfikar.github.io/Website_personal/" target="_blank" class="btn btn-outline-primary btn-sm">Lihat Website</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Seller itemku -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title"><i class="fas fa-store text-success me-2"></i>Seller – itemku (ZemStore)</h5>
+          <p class="card-text">Founder dari ZemStore, aktif menjual produk digital di platform ecommerce itemku.</p>
+          <a href="https://www.itemku.com/t/zemstore?from=productdetail" target="_blank" class="btn btn-outline-primary btn-sm">Kunjungi ZemStore</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Pengabdian Masyarakat -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title"><i class="fas fa-hands-helping text-info me-2"></i>Pengabdian Masyarakat – NaviKu</h5>
+          <p class="card-text">Sebagai Bendahara dalam proyek pengembangan aplikasi NaviKu oleh Telkom University.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section id="skills" class="container my-5">
+  <div class="text-center mb-4">
+    <h2>Backend & Contributions</h2>
+    <p class="text-muted">Proyek nyata yang pernah saya kontribusikan secara langsung</p>
+  </div>
+
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+
+    <!-- Project 1: Pelajarin -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">
+            <i class="fab fa-github text-dark me-2"></i>
+            Pelajarin – Learning Management System
+          </h5>
+          <p class="card-text">
+            Kontribusi dalam pengembangan sistem LMS menggunakan <strong>Laravel</strong>, <strong>PHP</strong>, dan <strong>MySQL</strong>. Mendukung fitur manajemen materi, quiz, dan dashboard pengguna.
+          </p>
+          <a href="https://github.com/faturh/Pelajarin-Tubes-WAD" target="_blank" class="btn btn-outline-dark btn-sm">
+            <i class="fab fa-github me-1"></i> View on GitHub
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 2: Sistem Informasi Pengaduan -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">
+            <i class="fab fa-github text-dark me-2"></i>
+            SI Pengaduan – Complaint Management System
+          </h5>
+          <p class="card-text">
+            Berperan dalam pengembangan aplikasi pelaporan dan pengaduan berbasis web dengan <strong>Laravel</strong>, <strong>Blade Template</strong>, serta integrasi admin dashboard dan notifikasi.
+          </p>
+          <a href="https://github.com/PPLKelompok411/SI4605-KEL411" target="_blank" class="btn btn-outline-dark btn-sm">
+            <i class="fab fa-github me-1"></i> View on GitHub
+          </a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+
+<section id="uiux" class="container my-5">
+  <div class="text-center mb-4">
+    <h2>UI/UX Projects</h2>
+    <p class="text-muted">Desain antarmuka dan pengalaman pengguna berbasis Figma</p>
+  </div>
+
+  <div class="mt-2">
+  <span class="badge bg-danger">Figma</span>
+  <span class="badge bg-secondary">UI Design</span>
+  <span class="badge bg-secondary">Prototype</span>
+</div>
+
+
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+
+    <!-- Project 1: TUBES LMS UI -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">
+            <i class="fab fa-figma text-danger me-2"></i>
+            LMS – Learning Management System UI
+          </h5>
+          <p class="card-text">
+            Desain UI sistem pembelajaran online yang interaktif dan responsif, lengkap dengan halaman login, dashboard, dan halaman materi pembelajaran.
+          </p>
+          <a href="https://www.figma.com/design/NrDKstfgrxFZVeMBmspCQE/TUBES?node-id=0-1&p=f&t=gRM7HhgMzHXGfRcQ-0" target="_blank" class="btn btn-outline-danger btn-sm">
+            <i class="fab fa-figma me-1"></i> View Figma Design
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 2: Bandara Kertajati (Prototype) -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">
+            <i class="fab fa-figma text-danger me-2"></i>
+            Website Bandara – UI Prototype
+          </h5>
+          <p class="card-text">
+            Merancang prototype website informasi dan layanan bandara menggunakan Figma, menekankan pengalaman pengguna dan navigasi intuitif.
+          </p>
+          <a href="https://www.figma.com/proto/qkHE2TT9ObenvRXtTZcm3q/bndara?node-id=83-61&starting-point-node-id=81%3A9" target="_blank" class="btn btn-outline-danger btn-sm">
+            <i class="fab fa-figma me-1"></i> View Prototype
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 3: Bandara Kertajati (Full Design File) -->
+    <div class="col">
+      <div class="card h-100 border-0 shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title">
+            <i class="fab fa-figma text-danger me-2"></i>
+            Website Bandara – Full UI Design
+          </h5>
+          <p class="card-text">
+            Desain lengkap struktur dan tampilan website Bandara Kertajati mulai dari homepage, informasi penerbangan, hingga halaman kontak.
+          </p>
+          <a href="https://www.figma.com/design/qkHE2TT9ObenvRXtTZcm3q/bndara?node-id=0-1&p=f&t=nQJ7bgeYx3yvtcfb-0" target="_blank" class="btn btn-outline-danger btn-sm">
+            <i class="fab fa-figma me-1"></i> View Design
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 4: Modern Web Layout UI -->
+<div class="col">
+  <div class="card h-100 border-0 shadow-sm">
+    <div class="card-body">
+      <h5 class="card-title">
+        <i class="fab fa-figma text-danger me-2"></i>
+        Modern Website UI – General Layout
+      </h5>
+      <p class="card-text">
+        Merancang layout website modern dengan pendekatan clean design dan struktur responsif. Fokus pada komposisi visual dan user-friendly layout.
+      </p>
+      <a href="https://www.figma.com/design/K7NVCmjh5vEI7yS9Am29Tp/Untitled?node-id=0-1&p=f&t=Vaic8VqdKj6MICgl-0" target="_blank" class="btn btn-outline-danger btn-sm">
+        <i class="fab fa-figma me-1"></i> View Design
+      </a>
+    </div>
+  </div>
+</div>
+
+
+  </div>
+</section>
+
+<section id="skills" class="container my-5">
+  <div class="text-center mb-4">
+    <h2>My Strengths</h2>
+    <p class="text-muted">Hard skills & soft skills yang mendukung saya sebagai seorang software developer</p>
+  </div>
+
+  <div class="row">
+    <!-- Hard Skills -->
+    <div class="col-md-6">
+      <div class="card border-0 shadow-sm mb-4">
+        <div class="card-body">
+          <h5 class="card-title"><i class="fas fa-tools text-primary me-2"></i>Hard Skills</h5>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Adobe Photoshop</li>
+            <li class="list-group-item">Adobe Premiere Pro</li>
+            <li class="list-group-item">Figma</li>
+            <li class="list-group-item">Bizagi Modeler</li>
+            <li class="list-group-item">Draw.io</li>
+            <li class="list-group-item">Visual Paradigm</li>
+            <li class="list-group-item">Kali Linux</li>
+            <li class="list-group-item">Cisco Packet Tracer</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Soft Skills -->
+    <div class="col-md-6">
+      <div class="card border-0 shadow-sm mb-4">
+        <div class="card-body">
+          <h5 class="card-title"><i class="fas fa-user-check text-success me-2"></i>Soft Skills</h5>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Mudah beradaptasi di lingkungan baru</li>
+            <li class="list-group-item">Bertanggung jawab terhadap tugas</li>
+            <li class="list-group-item">Cepat mempelajari hal baru</li>
+            <li class="list-group-item">Selalu tepat waktu</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="text-center py-3 bg-light">
